--- a/components/Countries/Countries.css
+++ b/components/Countries/Countries.css
@@ -1,3 +1,26 @@
-.number-of-countries{
+* {
+    color: lightblue;
+}
+
+.number-of-countries {
     margin-bottom: 100px;
+}
+
+.countries {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+@media screen and (max-width: 900px) and (min-width: 600px) {
+    .countries{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .countries{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
