--- a/components/Countries/Countries.css
+++ b/components/Countries/Countries.css
@@ -6,6 +6,21 @@
     margin-bottom: 100px;
 }
 
+.visited-title{
+    color: palegreen;
+}
+
+.visited-img{
+    height: 50px;
+    width: 100px;
+}
+
+.visited-container{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
 .countries {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
